Source/WebCore/style/StyleAdjuster.cpp
@@ -30,6 +30,7 @@
 #include "config.h"
 #include "StyleAdjuster.h"
 
+#include "AnimationBase.h"
 #include "CSSFontSelector.h"
 #include "Element.h"
 #include "FrameView.h"
@@ -42,6 +43,7 @@
 #include "MathMLElement.h"
 #include "Page.h"
 #include "Quirks.h"
+#include "RenderBox.h"
 #include "RenderStyle.h"
 #include "RenderTheme.h"
 #include "RuntimeEnabledFeatures.h"
@@ -522,6 +524,22 @@ void Adjuster::adjustSVGElementStyle(RenderStyle& style, const SVGElement& svgEl
     // SVG text layout code expects us to be a block-level style element.
     if ((svgElement.hasTagName(SVGNames::foreignObjectTag) || svgElement.hasTagName(SVGNames::textTag)) && style.isDisplayInlineType())
         style.setDisplay(DisplayType::Block);
+}
+
+void Adjuster::adjustAnimatedStyle(RenderStyle& style, const RenderStyle* parentBoxStyle, OptionSet<AnimationImpact> impact)
+{
+    // Set an explicit used z-index in two cases:
+    // 1. When the element respects z-index, and the style has an explicit z-index set (for example, the animation
+    //    itself may animate z-index).
+    // 2. When we want the stacking context side-effets of explicit z-index, via forceStackingContext.
+    // It's important to not clobber an existing used z-index, since an earlier animation may have set it, but we
+    // may still need to update the used z-index value from the specified value.
+    bool elementRespectsZIndex = style.position() != PositionType::Static || (parentBoxStyle && parentBoxStyle->isDisplayFlexibleOrGridBox());
+
+    if (elementRespectsZIndex && !style.hasAutoSpecifiedZIndex())
+        style.setUsedZIndex(style.specifiedZIndex());
+    else if (impact.contains(AnimationImpact::ForcesStackingContext))
+        style.setUsedZIndex(0);
 }
 
 void Adjuster::adjustForSiteSpecificQuirks(RenderStyle& style) const
